2011-01-21  Ryosuke Niwa  <rniwa@webkit.org>

        Unreviewed Chromium build fix attempt for r76378.

        * src/WebScrollbarImpl.cpp:
        (WebKit::WebScrollbar::create):
        (WebKit::WebScrollbarImpl::WebScrollbarImpl):

2011-01-21  Chris Rogers  <crogers@google.com>

        Reviewed by Kenneth Russell.

        Add chromium bundled audio spatialization resources to WebAudio.grd
        https://bugs.webkit.org/show_bug.cgi?id=52651

        * WebKit.grd:

2011-01-21  Xiyuan Xia  <xiyuan@chromium.org>

        Reviewed by Tony Chang.

        Use WebThemeEngine for relevant RenderTheme parts for chromium/linux.
        https://bugs.webkit.org/show_bug.cgi?id=52826

        * WebKit.gyp:
        * src/ChromiumBridge.cpp:
        (WebCore::WebThemePart):
        (WebCore::GetWebThemeExtraParams):

2011-01-21  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Part 2 of "Cleanup Scrollbar/ScrollbarClient relationship"
        https://bugs.webkit.org/show_bug.cgi?id=52779

        Rename ScrollbarClient -> ScrollableArea.

        * src/AutoFillPopupMenuClient.cpp:
        (WebKit::AutoFillPopupMenuClient::createScrollbar):
        * src/AutoFillPopupMenuClient.h:
        * src/WebScrollbarImpl.cpp:
        (WebKit::WebScrollbarImpl::WebScrollbarImpl):
        (WebKit::WebScrollbarImpl::scroll):
        (WebKit::WebScrollbarImpl::onMouseWheel):
        (WebKit::WebScrollbarImpl::onKeyDown):
        * src/WebScrollbarImpl.h:
        * tests/PopupMenuTest.cpp:
        (WebKit::TestPopupMenuClient::createScrollbar):

2011-01-21  Sailesh Agrawal  <sail@chromium.org>

        Reviewed by Ryosuke Niwa.

        [chromium] Notify WebFrameClient when spellcheck state changes
        https://bugs.webkit.org/show_bug.cgi?id=52680

        * public/WebFrameClient.h:
        (WebKit::WebFrameClient::continuousSpellCheckingEnabledStateChanged):
        * src/EditorClientImpl.cpp: